fix some bugs, change auth and middleware, fix some code, add some feature
